Fri Jul 22 21:45:21 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/dl/handle.c (dlhandle_sym): clear previous error with dlerror()
	  before calling dlsym(). [ruby-dev:44091] [Bug #5021]

Fri Jul 22 19:05:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_enc_symname2_p): get rid of potential out-of-bound
	  access.

Fri Jul 22 13:55:59 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/net/http.rb:  Net::HTTP#finish is used to manually close
	  connections.  [Ruby 1.9 - Bug #5045]

Fri Jul 22 13:51:29 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/readline/readline.c:  Add examples for Readline.completion_proc=.
	  [Ruby 1.9 - Bug #5057]

Fri Jul 22 13:20:33 2011  Eric Hodel  <drbrain@segment7.net>

	* tool/rbinstall.rb (default gems):  Install executables into the fake
	  gem dir for Gem.bin_path.  [Ruby 1.9 - Bug #4485]

Fri Jul 22 13:03:12 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* backport r32609 from trunk.

	* ext/openssl/ossl_hmac.c: Revert checking return type of
	  HMAC_Init_ex as it is not compatible with OpenSSL < 1.0.0.

Fri Jul 22 11:22:20 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* backport r32606 from trunk.

	* ext/openssl/ossl_digest.c: Check return value of EVP_DigestInit_ex.
	* ext/openssl/ossl_hmac.c: Check return value of HMAC_Init_ex.
	  Thanks, Jared Jennings, for the patch.
	  [ Ruby 1.9 - Bug #4944 ] [ruby-core:37670]

Fri Jul 22 09:17:43 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* backport r32604 from trunk.

	* ext/openssl/ossl_engine.c: Avoid double free of ENGINE reference.
	* test/openssl/test_engine.rb: Add a test for it.
	  Thanks to Ippei Obayashi for providing the patch.
	  [ Ruby 1.9 - Bug #5062 ] [ruby-dev:44173]

Fri Jul 22 06:39:34 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/csv.rb: Do not modify CSV.generate's argument [ruby-core:38356]

Thu Jul 21 20:02:11 2011  Yusuke Endoh  <mame@tsg.ne.jp>
