@@ -1,3 +1,9 @@
+Fri Jul 22 21:49:28 2011  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/webrick/httprequest.rb (WEBrick::HTTPRequest#each):
+	  Allow HTTP/0.9 request which doesn't has any header or body.
+	  patched by Felix Jodoin. [ruby-core:38040] [Bug #5022]
+
 Fri Jul 22 21:45:21 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/dl/handle.c (dlhandle_sym): clear previous error with dlerror()
